<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingLeft="16sp"
    android:paddingTop="16sp"
    android:paddingRight="16sp"
    android:paddingBottom="16sp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="107dp"
        android:layout_height="101dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:srcCompat="@drawable/dessert" />

    <TextView
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/firmware_catering"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textColorHighlight="#009688"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="50dp"
        android:paddingLeft="16sp"
        android:paddingRight="16sp"
        android:text="@string/contact_us"
        android:textColorLink="#3F51B5"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="14dp"
        android:hapticFeedbackEnabled="true"
        android:lineSpacingExtra="10sp"
        android:paddingLeft="16sp"
        android:paddingRight="16sp"
        android:text="@string/about"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="349dp"
        android:layout_height="124dp"
        android:layout_marginTop="123dp"
        android:layout_marginBottom="122dp"
        android:lines="2"
        android:paddingLeft="16sp"
        android:paddingRight="16sp"
        android:text="@string/book_your_next_event_with_us"
        android:textAlignment="center"
        android:textSize="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.312" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="127dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="115dp"
        android:fontFamily="sans-serif-smallcaps"
        android:lines="5"
        android:text="@string/firmware_catering_is_a_family_business_that_prioritizes_customer_service_and_satisfaction_our_services_range_from_savory_pastas_to_gourmet_desserts_and_much_much_more"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.75" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="107dp"
        android:layout_height="101dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/dinner" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="107dp"
        android:layout_height="101dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="33dp"
        android:contentDescription="@string/todo2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:srcCompat="@drawable/lunch" />

    <ImageView

        android:id="@+id/imageView"
        android:layout_width="103dp"
        android:layout_height="115dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="142dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="142dp"
        android:contentDescription="@string/todo1"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@drawable/pic1" />


</androidx.constraintlayout.widget.ConstraintLayout>
